--- a/src/app/components/user/perfil/perfil.component.html
+++ b/src/app/components/user/perfil/perfil.component.html
@@ -41,6 +41,7 @@
     </div>
   </div>
 
+  <!-- CARD -->
   <div class="col-md-4">
     <div class="card card-user">
       <div class="card-body">
@@ -54,15 +55,7 @@
             placeholder=""
             style="display: none"
           />
-<!--
-            <img
-            href="javascript:void(0)"
-              alt="..."
-              class="avatar"
-              [src]="imagemURL"
-              click="file.click()"
-              style="cursor: pointer;"
-            /> -->
+
             <img
             class="image"
             [src]="imagemURL"
